code/BUGSTOFIX.txt
MainTester.java:70: error: non-static variable player cannot be referenced from a static context
                                playerX = player.getX();
                                          ^
MainTester.java:71: error: non-static variable player cannot be referenced from a static context
                                playerY = player.getY();
                                          ^
MainTester.java:74: error: non-static variable rooms cannot be referenced from a static context
                                        currentRoom = rooms.get(i);
                                                      ^
MainTester.java:93: error: non-static variable rooms cannot be referenced from a static context
                                                                for (int i = 0; i < rooms.size(); i++)
                                                                                    ^
MainTester.java:96: error: non-static variable rooms cannot be referenced from a static context
                                                                        if (rooms.get(i).getY() == currentRoom.getY() + 1)
                                                                            ^
MainTester.java:104: error: non-static variable player cannot be referenced from a static context
                                                                                player.setY(player.getY() + 1);
                                                                                            ^
MainTester.java:104: error: non-static variable player cannot be referenced from a static context
                                                                                player.setY(player.getY() + 1);
                                                                                ^
MainTester.java:104: error: cannot find symbol
                                                                                player.setY(player.getY() + 1);
                                                                                      ^
  symbol:   method setY(int)
  location: variable player of type PlayerCharacter
MainTester.java:115: error: non-static variable rooms cannot be referenced from a static context
                                                                for (int i = 0; i < rooms.size(); i++)
                                                                                    ^
MainTester.java:119: error: non-static variable rooms cannot be referenced from a static context
                                                                        if(rooms.get(i).getX() == currentRoom.getX() - 1)
                                                                           ^
MainTester.java:127: error: non-static variable player cannot be referenced from a static context
                                                                                player.setX(player.getX() - 1);                 
//Moving west
                                                                                            ^
MainTester.java:127: error: non-static variable player cannot be referenced from a static context
                                                                                player.setX(player.getX() - 1);                 
//Moving west
                                                                                ^
MainTester.java:127: error: cannot find symbol
                                                                                player.setX(player.getX() - 1);                 
//Moving west
                                                                                      ^
  symbol:   method setX(int)
  location: variable player of type PlayerCharacter
MainTester.java:138: error: non-static variable rooms cannot be referenced from a static context
                                                                for (int i = 0; i < rooms.size(); i++)
                                                                                    ^
MainTester.java:142: error: non-static variable rooms cannot be referenced from a static context
                                                                        if (rooms.get(i).getX() == currentRoom.getX() + 1)
                                                                            ^
MainTester.java:150: error: non-static variable player cannot be referenced from a static context
                                                                                player.setX(player.getX() + 1);
                                                                                            ^
MainTester.java:150: error: non-static variable player cannot be referenced from a static context
                                                                                player.setX(player.getX() + 1);
                                                                                ^
MainTester.java:150: error: cannot find symbol
                                                                                player.setX(player.getX() + 1);
                                                                                      ^
  symbol:   method setX(int)
  location: variable player of type PlayerCharacter
MainTester.java:161: error: non-static variable rooms cannot be referenced from a static context
                                                                for (int i = 0; i < rooms.size(); i++)
                                                                                    ^
MainTester.java:165: error: non-static variable rooms cannot be referenced from a static context
                                                                        if (rooms.get(i).getY() == currentRoom.getY() - 1)
                                                                            ^
MainTester.java:173: error: non-static variable player cannot be referenced from a static context
                                                                                player.setY(player.getY() - 1);
                                                                                            ^
MainTester.java:173: error: non-static variable player cannot be referenced from a static context
                                                                                player.setY(player.getY() - 1);
                                                                                ^
MainTester.java:173: error: cannot find symbol
                                                                                player.setY(player.getY() - 1);
                                                                                      ^
  symbol:   method setY(int)
  location: variable player of type PlayerCharacter
MainTester.java:202: error: non-static variable player cannot be referenced from a static context
                                                for (int i = 0; i < player.getInventory.size(); i++)
                                                                    ^
MainTester.java:202: error: cannot find symbol
                                                for (int i = 0; i < player.getInventory.size(); i++)
                                                                          ^
  symbol:   variable getInventory
  location: variable player of type PlayerCharacter
MainTester.java:204: error: non-static variable player cannot be referenced from a static context
                                                        System.out.println(player.getInventory.get(i).getDescription()); 
//fucking object-oriented design
                                                                           ^
MainTester.java:204: error: cannot find symbol
                                                        System.out.println(player.getInventory.get(i).getDescription()); 
//fucking object-oriented design
                                                                                 ^
  symbol:   variable getInventory
  location: variable player of type PlayerCharacter
MainTester.java:210: error: non-static variable player cannot be referenced from a static context
                                                System.out.println(player.getHealth());
                                                                   ^
./Weapon.java:17: error: method does not override or implement a method from a supertype
        @Override
        ^
./Chest.java:60: error: method does not override or implement a method from a supertype
        @Override
        ^
./ChestKey.java:21: error: method does not override or implement a method from a supertype
        @Override
        ^
42 errors

